<resources>
    <string name="app_name">Flashcard-App</string>
    <string name="flashcard_application">Flashcard Application</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="question_will_appear">question_will_appear</string>
    <string name="trueButton">true button</string>
    <string name="Next">next</string>
    <string name="quiz_screen">Quiz Screen</string>
    <string name="finish_quiz">Finish Quiz</string>
    <string name="falseButton">falseButton</string>
    <string name="feedback_here">feedback here</string>
    <string name="Exit">exit</string>
    <string name="feedbackHere">feedback_here</string>
    <string name="reviewAgain">review_again</string>

</resources>