<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scoreLayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="24dp"
    android:background="#FAFAFA">

    <!-- Display the user's score -->
    <TextView
        android:id="@+id/scoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_marginBottom="24dp" />

    <!-- Displays personalized feedback like "Great Job! -->
    <TextView
        android:id="@+id/feedbackTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="#CDDC39"
        android:text="@string/feedbackHere"
        android:textColor="#444444"
        android:textSize="20sp" />

    <!-- Button to restart the flashcard quiz -->
    <Button
        android:id="@+id/reviewButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:allowUndo="true"
        android:backgroundTint="#CDDC39"
        android:text="@string/Exit"
        tools:ignore="VisualLintButtonSize" />

    <!-- Button to exit the app -->
    <Button
        android:id="@+id/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#CDDC39"
        android:text="@string/reviewAgain" />

</LinearLayout>