<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3F2FD"
    android:backgroundTint="#FFEBBE"
    android:gravity="center"
    android:orientation="vertical">

    <!-- TextView to display the question -->
    <TextView
        android:id="@+id/questionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sample Question"
        android:textSize="24sp"
        android:textColor="#000000"
        android:gravity="center"
        android:layout_margin="16dp"/>



    <!-- "True button for user to answer True -->
    <Button
        android:id="@+id/trueButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#E9EBDD"
        android:text="@string/trueButton"
        tools:ignore="VisualLintButtonSize" />

    <!-- False button for user to answer False -->
    <Button
        android:id="@+id/falseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#E9EBDD"
        android:text="@string/falseButton"
        tools:ignore="VisualLintButtonSize" />

    <!-- TextView to show the answer entered by user was correct or incorrect -->
    <TextView
        android:id="@+id/feedbackTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text=""
        android:textColor="#333333"
        android:textSize="18sp" />

    <!-- "Next" button to move  to the next question -->
    <Button
        android:id="@+id/nextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#E9EBDD"
        android:text="@string/Next"
        tools:ignore="VisualLintButtonSize" />


</LinearLayout>